Clean up debugging styles, prevent horizontal scrollbar

--- a/qa-theme/Snow/qa-styles.css
+++ b/qa-theme/Snow/qa-styles.css
@@ -156,9 +156,6 @@ table {
 	border-collapse: collapse;
 }
 
-table tr:hover {
-	background: #fafafa;
-}
 
 /* Headings */
 h1 {
